--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
             -   name: Checkout code
                 uses: actions/checkout@v3
 
+            # Устанавливаем Docker Compose
+            -   name: Set up Docker Compose
+                run: |
+                    sudo apt-get update
+                    sudo apt-get install -y docker-compose
+
             # Сборка контейнеров через Docker Compose
             -   name: Build Docker containers
                 run: docker-compose -f docker-compose.yml build
