--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
                     sudo apt-get update
                     sudo apt-get install -y docker-compose
 
+            # Показать список файлов
+            -   name: List repository files
+                run: ls -R
+
             # Сборка контейнеров через Docker Compose
             -   name: Build Docker containers
                 run: docker-compose -f docker-compose.yml build
