30-11-24 upd deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,17 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Deploy application
-              env:
-                  REMOTE_USER: "dnezhkin"                                        # Имя пользователя на сервере
-                  REMOTE_HOST: "176.123.160.245"                                 # Адрес сервера
-                  REMOTE_PATH: "/home/dnezhkin/apps/simple-api-service"          # Путь к приложению на сервере
-              run: |
-                  ssh ${REMOTE_USER}@${REMOTE_HOST} "cd ${REMOTE_PATH} && make rerun"
+            -   name: Set up SSH
+                run: |
+                    mkdir -p ~/.ssh
+                    echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
+                    chmod 600 ~/.ssh/id_rsa
+                    ssh-keyscan -H 176.123.160.245 >> ~/.ssh/known_hosts
+
+            -   name: Deploy application
+                env:
+                    REMOTE_USER: "dnezhkin"                                        # Имя пользователя на сервере
+                    REMOTE_HOST: "176.123.160.245"                                 # Адрес сервера
+                    REMOTE_PATH: "/home/dnezhkin/apps/simple-api-service"          # Путь к приложению на сервере
+                run: |
+                    ssh ${REMOTE_USER}@${REMOTE_HOST} "cd ${REMOTE_PATH} && git pull && docker-compose down && docker-compose build && docker-compose up -d && docker exec sas_php composer update"
