--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
         services:
             # Настраиваем Docker Compose
             docker:
+                if: runner.os == 'Linux'
                 image: docker/compose:latest
 
         steps:
