--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     build-and-test:
         strategy:
             matrix:
-                os: [ ubuntu-latest, macos-latest, windows-latest]  # Добавляем ОС
+                os: [ ubuntu-latest, macos-latest ]  # Добавляем ОС
         runs-on: ${{ matrix.os }}  # Используем текущую ОС из матрицы
 
         steps:
@@ -30,8 +30,9 @@ jobs:
             -   name: Install Docker on macOS
                 if: runner.os == 'macOS'
                 run: |
-                    brew install docker-compose
-                    sleep 10 
+                    brew install --cask docker
+                    open /Applications/Docker.app
+                    sleep 10  # Ожидаем запуска Docker Engine
 
             # Показать список файлов
             -   name: List repository files
