--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
             -   name: Checkout code
                 uses: actions/checkout@v3
 
-            # Устанавливаем Docker Compose (только для Linux)
+            # Устанавливаем docker-compose (только для Linux)
             -   name: Set up Docker Compose
                 if: runner.os == 'Linux'
                 run: |
@@ -26,7 +26,7 @@ jobs:
                     sudo apt-get install -y docker-compose
 
             # Устанавливаем Docker на macOS
-            # Ожидаем запуска Docker Engine
+            # Ожидаем запуска docker-compose
             -   name: Install Docker on macOS
                 if: runner.os == 'macOS'
                 run: |
@@ -34,16 +34,22 @@ jobs:
                     open /Applications/Docker.app
                     sleep 10  # Ожидаем запуска Docker Engine
 
+            # Устанавливаем docker-compose
+            -   name: Install Docker on macOS
+                if: runner.os == 'macOS'
+                run: |
+                    brew install docker-compose
+
             # Показать список файлов
             -   name: List repository files
                 if: runner.os == 'Linux'
                 run: ls -R
 
-            # Сборка контейнеров через Docker Compose
+            # Сборка контейнеров через docker-compose
             -   name: Build Docker containers
                 run: docker-compose -f docker-compose.yaml build
 
-            # Запускаем сервисы через Docker Compose
+            # Запускаем сервисы через docker-compose
             -   name: Start Docker Compose services
                 run: docker-compose -f docker-compose.yaml up -d
 
