--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,15 @@ jobs:
                     brew install docker-compose
                     sleep 10  # Ожидаем запуска Docker Engine
 
+            # Настраиваем docker на macOS
+            -   name: Install Docker on macOS
+                if: runner.os == 'macOS'
+                run: |
+                    sudo usermod -aG docker $(whoami)
+                    open /Applications/Docker.app
+                    sleep 10 
+                    docker ps
+
             # Показать список файлов
             -   name: List repository files
                 if: runner.os == 'Linux'
@@ -42,21 +51,21 @@ jobs:
 
             # Сборка контейнеров через docker-compose
             -   name: Build Docker containers
-                run: sudo docker-compose -f docker-compose.yaml build
+                run: docker-compose -f docker-compose.yaml build
 
             # Запускаем сервисы через docker-compose
             -   name: Start Docker Compose services
-                run: sudo docker-compose -f docker-compose.yaml up -d
+                run: docker-compose -f docker-compose.yaml up -d
 
             # Установка зависимостей через Composer
             -   name: Install dependencies
-                run: sudo docker exec sas_php composer install
+                run: docker exec sas_php composer install
 
             # Запуск тестов
             -   name: Run PHPUnit tests
-                run: sudo docker exec sas_php php bin/phpunit
+                run: docker exec sas_php php bin/phpunit
 
             # Остановка и удаление контейнеров
             -   name: Stop and clean up Docker Compose
                 if: always()
-                run: sudo docker-compose -f docker-compose.yaml down
+                run: docker-compose -f docker-compose.yaml down
