--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     build-and-test:
         strategy:
             matrix:
-                os: [ ubuntu-latest, macos-latest ]  # Добавляем ОС
+                os: [ ubuntu-latest, macos-latest, windows-latest ]  # Добавляем ОС
         runs-on: ${{ matrix.os }}  # Используем текущую ОС из матрицы
 
         steps:
@@ -24,6 +24,18 @@ jobs:
                 run: |
                     sudo apt-get update
                     sudo apt-get install -y docker-compose
+
+            # Устанавливаем docker-compose (только для Windows)
+            -   name: Set up Docker Compose
+                if: runner.os == 'Windows'
+                run: choco install docker-desktop
+
+            # Устанавливаем docker-compose (только для Windows)
+            -   name: Set up Docker Compose
+                if: runner.os == 'Windows'
+                run: |
+                    choco install php --version=8.1.0 -y
+                    choco install composer -y       
 
             # Устанавливаем php и composer на macOS
             # Загружаем пакеты через composer
@@ -43,17 +55,17 @@ jobs:
 
             # Сборка контейнеров через docker-compose (Linux)
             -   name: Build Docker containers (Linux only)
-                if: runner.os == 'Linux'
+                if: runner.os != 'macOS'
                 run: docker-compose -f docker-compose.yaml build
 
             # Запускаем сервисы через docker-compose (Linux)
             -   name: Start Docker Compose services (Linux only)
-                if: runner.os == 'Linux'
+                if: runner.os != 'macOS'
                 run: docker-compose -f docker-compose.yaml up -d
 
             # Установка зависимостей через Composer (Linux)
             -   name: Install dependencies (Linux only)
-                if: runner.os == 'Linux'
+                if: runner.os != 'macOS'
                 run: docker exec sas_php composer install
 
             # Установка зависимостей через Composer (Linux)
@@ -63,7 +75,7 @@ jobs:
 
             # Запуск тестов (Linux)
             -   name: Run PHPUnit tests (Linux only)
-                if: runner.os == 'Linux'
+                if: runner.os != 'macOS'
                 run: docker exec sas_php php bin/phpunit
 
             # Запуск тестов (Mac)
@@ -73,5 +85,5 @@ jobs:
 
             # Остановка и удаление контейнеров
             -   name: Stop and clean up Docker Compose (Linux only)
-                if: always() && runner.os == 'Linux'
+                if: always() && runner.os != 'macOS'
                 run: docker-compose -f docker-compose.yaml down
