--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
                 run: |
                     choco install php --version=8.1.0 -y
                     choco install composer -y   
+                    Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
                     refreshenv
 
             # Проверка версий PHP и Composer
