--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -1,7 +1,6 @@
 server {
     listen 80;
     index index.php;
-    server_name 127.0.0.1 localhost;
     root /home/app/public;
 
     location / {
@@ -10,7 +9,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass localhost:9000;
         fastcgi_index index.php;
         fastcgi_read_timeout 1000;
         include fastcgi_params;
